--- a/package.json
+++ b/package.json
@@ -1,22 +1,48 @@
 {
-  "name": "express",
+  "name": "dmsystem",
   "version": "1.0.0",
-  "description": "Distributor Management System",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "test": "npm run dev"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "start": "npx tsc && node --max-old-space-size=8192 dist/server.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "yarn run typeorm migration:generate -d ./app/ormconfig.ts",
+    "migration:up": "yarn run typeorm migration:run -d ./app/ormconfig.ts",
+    "migration:down": "yarn run typeorm migration:revert -d ./app/ormconfig.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zala49/Distributor-Management-System.git"
-  },
-  "keywords": [
-    "test"
-  ],
   "author": "Hitesh Zala",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zala49/Distributor-Management-System/issues"
+  "dependencies": {
+    "@types/dotenv-safe": "^8.1.2",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "event-stream": "^4.0.1",
+    "express-jwt": "^7.7.5",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
+    "http-status-codes": "^2.2.0",
+    "joi": "^17.7.0",
+    "jwks-rsa": "^2.1.4",
+    "node-fetch": "^3.2.10",
+    "passport": "^0.6.0",
+    "passport-auth0": "^1.4.3",
+    "pg": "^8.11.0",
+    "sequelize": "^6.21.6",
+    "typeorm": "^0.3.11",
+    "yarn": "^1.22.19"
   },
-  "homepage": "https://github.com/zala49/Distributor-Management-System#readme"
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.17",
+    "@types/express-jwt": "^6.0.4",
+    "concurrently": "^7.4.0",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  }
 }
