--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "event-stream": "^4.0.1",
     "express-jwt": "^7.7.5",
+    "express-oauth2-jwt-bearer": "^1.5.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-status-codes": "^2.2.0",
