--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/dotenv-safe": "^8.1.2",
     "axios": "^0.27.2",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "event-stream": "^4.0.1",
@@ -27,6 +28,7 @@
     "express-validator": "^6.14.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^2.1.4",
     "node-fetch": "^3.2.10",
     "passport": "^0.6.0",
@@ -37,6 +39,7 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.17",
     "@types/express-jwt": "^6.0.4",
